# shadow_regression

./: .gitignore  CIFAR10_mean_example.py  CMakeLists.txt  checkout.py  depth_image_loader.py  human_robot_mapping.py  human_robot_mappingfile.py  map_cmp2.py  model.py  model_cmp.py  model_cmp4.py  model_cmp_fus.py  model_deep.py  model_new.py  model_resnet.py  model_spatialsoftmax.py  package.xml  pairs_image_loader.py  robotmap_cmp2.py  tams_human_robot_mappingfile.py  train_cmp.py  train_cmp2.py  train_cmp2_1.py  train_cmp2_2.py  train_cmp4.py  train_cmp4_aug.py  train_cmp_fus.py  train_deep.py  train_deep_deep.py  train_gpu.py  train_gpu2.py  train_gpu3.py  train_gpu4.py  train_gpu5.py  train_gpu6.py  train_self.py  train_spatial.py  triplet_image_loader.py  triplet_image_loader_check.py
data/: test.txt
data/handpose_data/: handpose_data1.csv  handpose_data10.csv  handpose_data14.csv  handpose_data15.csv  handpose_data16.csv  handpose_data18.csv  handpose_data2.csv  handpose_data20.csv  handpose_data21.csv  handpose_data24.csv  handpose_data25.csv  handpose_data29.csv  handpose_data3.csv  handpose_data30.csv  handpose_data32.csv  handpose_data5.csv  handpose_data6.csv  handpose_data8.csv  handpose_data_test.csv
data/handpose_data_test/: handpose_data1.csv  handpose_data11.csv  handpose_data12.csv  handpose_data13.csv  handpose_data14_1.csv  handpose_data17.csv  handpose_data18.csv  handpose_data19.csv  handpose_data22.csv  handpose_data23.csv  handpose_data26.csv  handpose_data27.csv  handpose_data28.csv  handpose_data31.csv  handpose_data4.csv  handpose_data7.csv  handpose_data9.csv  handpose_data_test_test.csv  handpose_data_train_test.csv
images/1/: info.txt
images/6.3gpu4/: log.txt
images/6.4cpm4/: log.txt
images/gpu1_fail/: info.txt
images/lrchange/: info.txt
launch/: multi_shadow_sim_bio.launch  shadow_sim_bio.launch  tams_shadow_sim_bio.launch  test_shadow_sim_bio.launch
map_dataset/: human_hand_loader.py  human_robot_mapping.py
model/: model_cmp.py  model_self.py  model_spatialsoftmax.py
random_pairs/: pairs_image_loader.py  random_human_robot_mappingfile.py
scripts/: depth_image_crop.py  depth_image_loader.py  human_robot_mapping.py  human_robot_mappingfile.py  python_quick_moveit.py  tams_human_robot_mappingfile.py
src/: bioik_dataset.cpp  collision_free_goal.h  multi_bioik_dataset.cpp  tams_bioik_dataset.cpp
test/: hand_imitation_test.py  triplet_image_loader_test.py
train/: train.py  train_cmp.py  train_cmp2.py  train_deep.py  train_gpu4.py  train_gpu5.py  triplet_image_loader.py  triplet_image_loader_check.py
