<?xml version="1.0"?>
<package format="2">
  <name>shadow_regression</name>
  <version>0.0.0</version>
  <description>The shadow_regression package</description>

  <maintainer email="me@sli.de">v4hn</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_move_group</build_depend>
  <build_depend>bio_ik</build_depend>
  <build_depend>cv_bridge</build_depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>moveit_ros_planning</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>bio_ik</exec_depend>
</package>
